# opencv-docker

./: Dockerfile-4.10.0-cu118-py38-ubuntu20.04  Dockerfile-4.10.0-py38-ubuntu20.04  README.md  test.py
4.10.0/: CMakeLists.txt  Dockerfile-cu118-py38-ubuntu20.04  Dockerfile-py38-ubuntu20.04  test.cpp  test.py
opencv-docker/: README.md
